manifests/media-apps/sonarr/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: sonarr
  namespace: media-apps
spec:
  endpointSelector:
    matchLabels:
      app: sonarr
  ingress:
    - fromEntities:
        - ingress
        - cluster
      toPorts:
        - ports:
            - port: "8989"
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: cilium
      toPorts:
        - ports:
            - port: "8989"
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: cloudflare-tunnel
            k8s:io.kubernetes.pod.namespace: cloudflare
      toPorts:
        - ports:
            - port: "8989"
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: overseerr
      toPorts:
        - ports:
            - port: "8989"
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: prowlarr
      toPorts:
        - ports:
            - port: "8989"
  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: plex
      toPorts:
        - ports:
            - port: "32400"
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: prowlarr
      toPorts:
        - ports:
            - port: "9696"
    # - toEndpoints:
    #     - matchLabels:
    #         app.kubernetes.io/name: sabnzbd
    #   toPorts:
    #     - ports:
    #         - port: "8080"
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: transmission
      toPorts:
        - ports:
            - port: "9091"
